# blinkist-sagemaker-template

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  train
scripts/: build_and_push.sh  format.sh  install.sh  lint.sh
src/: module.py  notebook.ipynb
