[tool.poetry]
name = "blinkist-sagemaker-template"
version = "0.1.0"
description = ""
authors = ["Philipp Hager <philipp.hager@blinkist.com>"]

[tool.poetry.dependencies]
s3fs = "^0.4.2"
python = "^3.6.11"
black = "^20.8b1"
papermill = "^2.2.1"
boto3 = "^1.16.17"
fsspec = "^0.8.4"
ipykernel = "^5.3.4"
ipywidgets = "^7.5.1"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
pandas = "^1.1.4"
pyarrow = "^2.0.0"
flake8 = "^3.8.4"
nbqa = "^0.4.1"
isort = "^5.6.4"
altair = "^4.1.0"
awscli = "^1.18.178"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
